--- a/campaigns/templates/campaigns/campaign_list.html
+++ b/campaigns/templates/campaigns/campaign_list.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h3 align="center">Campaigns List</h3>
-    <a href="/add-campaign/">Add New Campaign</a>
-    <table class="table table-bordered">
+
+    <table class="table table-bordered col-ms-6">
         <thead>
         <tr>
             <th>Title</th>
