Yessssss! Now the tests.py is working! :)

--- a/campaigns/templates/campaigns/campaign_detail.html
+++ b/campaigns/templates/campaigns/campaign_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <a href="{% url "campaigns:list" %}">Back to all campaigns</a>
-
+    <a href="add-reply">Add reply</a>
     <ul class="list-group">
         <br/>
         <p class="campaign_label">title:</p>
