Added reply page_title and fixed the OneToOneField to be none uniqe id.

--- a/campaigns/templates/campaigns/campaign_detail.html
+++ b/campaigns/templates/campaigns/campaign_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <a href="{% url "campaigns:list" %}">Back to all campaigns</a>
+    &nbsp;
     <a href="add-reply">Add reply</a>
     <ul class="list-group">
         <br/>
