--- a/campaigns/templates/campaigns/campaign_list.html
+++ b/campaigns/templates/campaigns/campaign_list.html
@@ -11,6 +11,8 @@
             <th>Due Date</th>
             <th>Link</th>
             <th>Replies Num</th>
+            <th>Replies Left</th>
+            <th>Owner</th>
         </tr>
         </thead>
         <tbody>
@@ -21,6 +23,8 @@
                 <td>{{ object.due_date }}</td>
                 <td>{{ object.link }}</td>
                 <td>{{ object.replies_num }}</td>
+                <td>{{ object.replies_left }}</td>
+                <td>{{ object.owner.profile_user.user.get_full_name }}</td>
             </tr>
         {% endfor %}
         </tbody>
