1)Added distnction campaigner\writer in signup form  2)Added link from single reply detail view to the list of all replies and vice versa

--- a/campaigns/templates/campaigns/campaign_detail.html
+++ b/campaigns/templates/campaigns/campaign_detail.html
@@ -4,7 +4,10 @@
 
     <a href="{% url "campaigns:list" %}">Back to all campaigns</a>
     &nbsp;
-    <a href="add-reply">Add reply</a>
+{#    <a href="view-replies">View Replies</a>#}
+     <a href="{% url "campaigns:replies_list" %}">View replies</a>
+    &nbsp;
+    <a href="add-reply">Add Reply</a>
     <ul class="list-group">
         <br/>
         <p class="campaign_label">title:</p>
