--- a/campaigns/templates/campaigns/reply_detail.html
+++ b/campaigns/templates/campaigns/reply_detail.html
@@ -9,7 +9,7 @@
         <br/>
         <p class="campaign_label">writer:</p>
         <li class="list-group-item">
-            {{ object.writer.profile_user.user.get_full_name }}
+            {{ object.writer.writer_user.user.get_full_name }}
         </li>
         <br/>
         <p class="campaign_label">campaign:</p>
