--- a/campaigns/templates/campaigns/reply_list.html
+++ b/campaigns/templates/campaigns/reply_list.html
@@ -3,33 +3,40 @@
 
 {% block content %}
     {% bootstrap_messages %}
-    <table class="table table-bordered col-ms-6">
-        <thead>
-        <tr>
-            <th>Reply Text</th>
-            <th>Created At</th>
-            <th>Last Modified</th>
-            <th>Posted At</th>
-            <th>Reply Link</th>
-            <th>Status</th>
-            <th>Writer</th>
-            <th>Campaign</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for object in object_list %}
+
+    {% if object_list %}
+
+        <table class="table table-bordered col-ms-6">
+            <thead>
             <tr>
-                <td><a href="{{ object.get_absolute_url }}">{{ object.reply_text }}</a></td>
-                <td>{{ object.created_at }}</td>
-                <td>{{ object.last_modified }}</td>
-                <td>{{ object.posted_at }}</td>
-                <td>{{ object.reply_link }}</td>
-                <td>{{ object.status }}</td>
-                <td>{{ object.writer.profile_user.user.get_full_name }}</td>
-                <td>{{ object.campaign.title }}</td>
+                <th>Reply Text</th>
+                <th>Created At</th>
+                <th>Last Modified</th>
+                <th>Posted At</th>
+                <th>Reply Link</th>
+                <th>Status</th>
+                <th>Writer</th>
+                <th>Campaign</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-{% bootstrap_pagination page_obj %}
+            </thead>
+            <tbody>
+            {% for object in object_list %}
+                <tr>
+                    <td><a href="{{ object.get_absolute_url }}">{{ object.reply_text }}</a></td>
+                    <td>{{ object.created_at }}</td>
+                    <td>{{ object.last_modified }}</td>
+                    <td>{{ object.posted_at }}</td>
+                    <td>{{ object.reply_link }}</td>
+                    <td>{{ object.status }}</td>
+                    <td>{{ object.writer.writer_user.user.get_full_name }}</td>
+                    <td>{{ object.campaign.title }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    {% bootstrap_pagination page_obj %}
+
+    {% else %}
+        No Replies Yet.
+    {% endif %}
 {% endblock %}
